--- a/webapp/app/partials/main/thWatchedRepoNavPanel.html
+++ b/webapp/app/partials/main/thWatchedRepoNavPanel.html
@@ -3,6 +3,9 @@
     <div class="navbar-right">
         <span>
             <form role="search" class="form-inline">
+                <span class="resultStatusChicklets">
+                    <ng-include src="'partials/thFilterChicklets.html'"></ng-include>
+                </span>
                 <span class="btn btn-sm"
                       ng-click="toggleUnclassifiedFailures()"
                       title="toggle filtering for unclassified failures - count of loaded failures"
