change showing filters

--- a/webapp/app/partials/main/thGlobalTopNavPanel.html
+++ b/webapp/app/partials/main/thGlobalTopNavPanel.html
@@ -85,7 +85,7 @@
 
     </div>
     <ng-include class="watched-repo-navbar" src="'partials/main/thWatchedRepoNavPanel.html'" ng-show="locationPath==='jobs'"></ng-include>
-    <ng-include src="'partials/main/thFilterBar.html'"></ng-include>
+    <!--<ng-include src="'partials/main/thFilterBar.html'"></ng-include>-->
     <ng-include src="'partials/main/thSheriffPanel.html'" ng-show="isSheriffPanelShowing"></ng-include>
     <ng-include src="'partials/main/thFilterPanel.html'" ng-show="isFilterPanelShowing"></ng-include>
 </nav>
