bug 1072346 - default height of bottom panel

--- a/webapp/app/css/treeherder.css
+++ b/webapp/app/css/treeherder.css
@@ -445,6 +445,7 @@ div#bottom-panel {
     background-color: #AAAAAA;
     font-size: 12px;
 
+    height: 270px;
     max-height: 35%;
     flex: none;
     -webkit-flex: none;
