--- a/webapp/app/css/treeherder.css
+++ b/webapp/app/css/treeherder.css
@@ -445,7 +445,7 @@ div#bottom-panel {
     background-color: #AAAAAA;
     font-size: 12px;
 
-    height: 270px;
+    height: 35%;
     max-height: 35%;
     flex: none;
     -webkit-flex: none;
